[gd_scene load_steps=14 format=3 uid="uid://b5qqd2nkbfher"]

[ext_resource type="Script" path="res://Scripts/mouse.gd" id="1_c22s2"]
[ext_resource type="Texture2D" uid="uid://bifvw2nm4ua3o" path="res://Sprites/Mouse/37d33ce4-533e-4eb5-a16b-efcd109fb78c-2.png" id="2_eormq"]
[ext_resource type="Texture2D" uid="uid://c6kn5frukrftb" path="res://Sprites/Mouse/87441380-e92b-43a2-82dd-6e4b6958437c-2.png" id="3_eup0c"]
[ext_resource type="Texture2D" uid="uid://8vv4171yp5y" path="res://Sprites/Mouse/69e5dea2-3f78-4cad-b656-0f55715a4d4b-2.png" id="4_ayn2c"]
[ext_resource type="Texture2D" uid="uid://l68nr48qgajp" path="res://Sprites/Mouse/d35af0e4-bdd9-4ea6-b427-ab296eaa25a4-2.png" id="5_votp0"]
[ext_resource type="Texture2D" uid="uid://df0p3tjxud0fb" path="res://Sprites/Mouse/clock_wise.png" id="6_bvx1r"]
[ext_resource type="Texture2D" uid="uid://vbur6lpy3f6k" path="res://Sprites/Mouse/counter_clock_wise.png" id="7_db6mb"]
[ext_resource type="Texture2D" uid="uid://dgu8vtrsaj1rs" path="res://Sprites/Mouse/unknown.png" id="8_rc2tp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_04i3m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_eormq")
}, {
"duration": 1.0,
"texture": ExtResource("5_votp0")
}, {
"duration": 1.0,
"texture": ExtResource("4_ayn2c")
}, {
"duration": 1.0,
"texture": ExtResource("3_eup0c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mja66"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6od84"]
size = Vector2(92, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjsx6"]
size = Vector2(87, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ify5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_bvx1r")
}, {
"duration": 1.0,
"texture": ExtResource("7_db6mb")
}, {
"duration": 1.0,
"texture": ExtResource("8_rc2tp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Mouse" type="Area2D"]
z_index = 1
texture_filter = 1
collision_layer = 16384
script = ExtResource("1_c22s2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_04i3m")
animation = &"idle"
frame_progress = 0.63725

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mja66")

[node name="HadamardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HadamardDetector"]
shape = SubResource("RectangleShape2D_6od84")
debug_color = Color(0.686275, 0.427451, 0.682353, 0.419608)

[node name="ExitDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDetector"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_xjsx6")

[node name="EntanglementDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntanglementDetector"]
shape = SubResource("RectangleShape2D_6od84")
debug_color = Color(0.686275, 0.427451, 0.682353, 0.419608)

[node name="ButtonDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonDetector"]
shape = SubResource("RectangleShape2D_6od84")
debug_color = Color(0.686275, 0.427451, 0.682353, 0.419608)

[node name="Qubit" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(-20, -40)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_5ify5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="HadamardDetector" to="." method="_on_hadamard_detector_area_entered"]
[connection signal="area_entered" from="ExitDetector" to="." method="_on_exit_detector_area_entered"]
[connection signal="area_exited" from="ExitDetector" to="." method="_on_exit_detector_area_exited"]
[connection signal="area_entered" from="EntanglementDetector" to="." method="_on_entanglement_detector_area_entered"]
[connection signal="area_exited" from="EntanglementDetector" to="." method="_on_entanglement_detector_area_exited"]
[connection signal="area_entered" from="ButtonDetector" to="." method="_on_button_detector_area_entered"]
